<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>comms_benchmark</name>
  <version>0.0.1</version>
  <description>Package for benchmarking ROS node communications in different scenarios.</description>
  <maintainer email="nlitz88@todo.todo">nlitz88</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_opencv</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>timing_diagnostics</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
